# win-audio-control

./: README.md  mise.toml  package-lock.json  package.json  pnpm-lock.yaml  quasar.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/layouts/: MainLayout.vue
src/pages/: IndexPage.vue
